*
* description:	changelog	
*/ 

#######
# LEGEND
#------------------
# * Changes
# + Additions
# ! Known Issues
# @ Fixed Bugs
# ? Planned / Potential
# X Resolved (not version dependent - could have been at any time post-release, only mark
#									  CURRENT bugs in changelog as bugs, resolve others.)
###################

#######
# v2.1 - March 29, 2020
###################

* Fixed incorrect date on v2.0 release.
? The completed sound has been updated to be less... dramatic.
? We now offer a disk wipe option (default confirm 'w' when only target drive exists.)
? We now display disk health percentage in drive listing.
? We now support viewing of different S.M.A.R.T stats.
? We now display a warning if target status < 70 percent.
? The blue color has been changed for readability.
? Default screen resolution has been adjusted for readability.
? Some code has been better optimized for performance.
? Internal header files now have the correct versions and dates.

#######
# v2.0 - February 29, 2020
###################

+ We now have a changelog!
+ Nvme drives are now default copy targets.
+ Primary ATA device is now default target (when nvme is missing).
+ We now look for a ntfs partition on a usb device to determine default source disk.
+ We now allow cloning to different size disks!!
+ Added more options when more than one source is detected.
+ Added an extra option on confirmation to choose a different action.
+ Added an extra options when more than one target is available.
+ Introduced the ignoring of usb devices with no ntfs partitions
+ We can now reverse clone from the internal drive to an external for load creations.
+ Added a menu for handling all the extra actions.

* Version updated to 2.0 due to the major rewrite of base code.
* USB device now defaults to source, even if label is missing.
* Rewrote the diskinfo parsing and moved logic outside this call.
* Massive code cleanup
* We now ignore optical drives.